Correcion de plainlla general